--- a/Day 4/style.css
+++ b/Day 4/style.css
@@ -1,54 +1,52 @@
 body {
-    margin: 0;
-    padding: 2rem;
-    box-sizing: border-box;
-    color: #273f52;
-    background-color: #e9e9e9;
-    background-attachment: fixed;
-    background-size: cover;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
 
-fieldset {
-    display: flex;
-    width: 45%;
-    margin: auto;
-    border-style: solid;
-    border-color: black;
-    justify-content: space-between;
-    padding: 2rem;
-    background-color: aliceblue;
-  }
+.circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 40px red, 0 0 0 43px #d3d3d3, inset 0 0 0 5px #fff,
+    inset 0 0 4px 5px black;
+  position: relative;
+}
 
-.left {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    padding: 1rem;
-  }
+.line {
+  border-bottom: 4px solid #000;
+  width: 75px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform-origin: bottom left;
+}
 
-.heads {
-    color: #004377;
-  }
+.line1 {
+  animation: time 216000s infinite linear;
+}
 
-legend {
-    margin: auto;
-    color: black;
-    /* background-color: white; */
-    font-size: 1.5rem;
-    padding: 0 3rem;
-    font-weight: bold;
+.line2 {
+  animation: time 3600s infinite linear;
+}
+
+.line3 {
+  animation: time 60s infinite linear;
+}
+
+@keyframes time {
+  to {
+    transform: rotate(360deg);
   }
-  .right_item {
-    margin-bottom: 5rem;
-  }
-  
-  .right {
-    display: flex;
-    width: 40%;
-    flex-direction: column;
-    border-left: 3px solid #336c98;
-    padding: 0 2rem 0 3rem;
-    justify-content: space-between;
-  }
-  
+}
+
+.center {
+  position: absolute;
+  top: 47%;
+  left: 45%;
+  width: 20px;
+  height: 20px;
+  background-color: #d3d3d3;
+  border-radius: 50%;
+}
