--- a/Day 35/instagram-clone-typescript/src/App.css
+++ b/Day 35/instagram-clone-typescript/src/App.css
@@ -5,6 +5,8 @@
 
 .navbar .navbar-nav {
 	margin-left: auto;
+	font-size: 1.5rem;
+	color: black;
 }
 .container {
 	max-width: 1000px;
@@ -14,6 +16,7 @@
 }
 
 .bi {
-	font-size: 25px;
 	text-decoration: none !important;
+	color: black;
+	padding: 0 5px;
 }
